--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,9 +20,7 @@
                     </a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="@{/logout}">
-                        Logout
-                    </a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
 
                 <li class="nav-item" sec:authorize="isAnonymous()">
