--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -30,8 +30,8 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
-                            <a class="btn btn-default" th:href="@{/}">Cancel</a>
                             <input value="Submit" type="submit" class="btn btn-primary"/>
+                            <a class="btn btn-secondary" th:href="@{/}">Cancel</a>
                         </div>
                     </div>
                 </fieldset>
