--- a/src/main/resources/templates/article/details.html
+++ b/src/main/resources/templates/article/details.html
@@ -1,4 +1,4 @@
-<main>
+<main xmlns:th="http://www.thymeleaf.org">
     <div class="container body-content">
         <div class="row">
             <div class="col-md-12">
@@ -7,17 +7,17 @@
                         <h2 th:text="${article.title}"></h2>
                     </header>
 
-                    <p th:text="${article.content}"> </p>
+                    <p th:text="${article.content}"></p>
 
                     <small class="author" th:text="${article.author.fullName}"></small>
 
                     <footer>
 
                         <div class="pull-right">
-
-                            <a class="btn btn-success btn-xs" th:href="@{/article/edit/{id}(id = ${article.id})}">Edit</a>
-                            <a class="btn btn-danger btn-xs" th:href="@{/article/delete/{id}(id = ${article.id})}">Delete</a>
-
+                            <th:block sec:authorize="isAuthenticated()">
+                                <a class="btn btn-success btn-xs" th:href="@{/article/edit/{id}(id = ${article.id})}">Edit</a>
+                                <a class="btn btn-danger btn-xs" th:href="@{/article/delete/{id}(id = ${article.id})}">Delete</a>
+                            </th:block>
                             <a class="btn btn-outline-primary float-right" th:href="@{/}">back &raquo;</a>
                         </div>
                     </footer>
