--- a/src/main/resources/templates/article/details.html
+++ b/src/main/resources/templates/article/details.html
@@ -1,4 +1,4 @@
-<main xmlns:th="http://www.thymeleaf.org">
+<main xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="container body-content">
         <div class="row">
             <div class="col-md-12">
@@ -14,7 +14,7 @@
                     <footer>
 
                         <div class="pull-right">
-                            <th:block sec:authorize="isAuthenticated()">
+                            <th:block sec:authorize="isAuthenticated()" th:if="${user.isAdmin() OR user.isAuthor(article)}">
                                 <a class="btn btn-success btn-xs" th:href="@{/article/edit/{id}(id = ${article.id})}">Edit</a>
                                 <a class="btn btn-danger btn-xs" th:href="@{/article/delete/{id}(id = ${article.id})}">Delete</a>
                             </th:block>
