--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,6 +9,13 @@
 
         <div class="collapse navbar-collapse " id="navbarColor01">
             <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item dropdown" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin</a>
+                    <ul class="dropdown-menu" role="menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 40px, 0px);">
+                        <li><a clas="dropdown-item" href="#">Categories</a></li>
+                        <li><a clas="dropdown-item"th:href="@{/admin/users/}">Users</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item " sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:href="@{/article/create}">
                         Create Article
