--- a/src/main/resources/templates/fragments/scripts-bundle.html
+++ b/src/main/resources/templates/fragments/scripts-bundle.html
@@ -1,4 +1,7 @@
-<script th:src="@{/scripts/jquery-2.2.4.min.js}"> </script>
-<script th:src="@{/scripts/bootstrap.bundle.js}"></script>
-<script th:src="@{/scripts/style.css}"></script>
-<script th:src="@{/scripts/my.js}"></script>
+<head th:fragment="head">
+    <title th:if="${pageTitle}" th:text="${pageTitle}"></title>
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
+    <script th:src="@{/scripts/jquery-3.3.1.min .js}"></script>
+    <script th:src="@{/scripts/bootstrap.js}"></script>
+
+</head>
