--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -7,6 +7,29 @@
                     <br/>
                     <span th:text="${user.fullName}"></span>
                 </div>
+                <div class="row">
+
+                    <th:block th:each="article : ${articles}">
+                        <div class="col-md-6">
+                            <article>
+                                <header>
+                                    <h2 th:text="${article.title}"></h2>
+                                </header>
+
+                                <p th:text="${article.summary}"></p>
+
+                                <small class="author" th:text="${article.author.fullName}"></small>
+
+                                <footer>
+                                    <div class="pull-right">
+                                        <a class="btn btn-outline-primary float-right"
+                                           th:href="@{/article/{id}(id=${article.id})}">Read more &raquo;</a>
+                                    </div>
+                                </footer>
+                            </article>
+                        </div>
+                    </th:block>
+                </div>
             </div>
         </div>
     </div>
